<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="orders_view_cart">Ver carrito de compras</string>
    <string name="orders_hint_search">Buscar</string>
    <string name="orders_market_button_view">%1$d Ver mi pedido %2$d</string>
    <string name="orders_market_add_product">Agregar a mi pedido %1$s</string>
    <string name="orders_market_update_product">Modificar mi pedido %1$s</string>
    <string name="orders_market_delete_product">Eliminar mi pedido</string>
    <string name="orders_market_tab_menu">Menu</string>
    <string name="orders_market_tab_food">Cart</string>
    <string name="orders_market_add_quantity">Unidades</string>
    <string name="orders_market_button_send_order">Enviar pedido</string>
    <string name="orders_market_button_new_order">Hacer otro pedido</string>
    <string name="order_market_button_go_to_home">Ir al inicio</string>
    <string name="orders_market_label_my_order">Mi pedido</string>
    <string name="order_market_restaurant">Restaurante</string>
    <string-array name="orders_market_order_tabs">
        <item>Carta</item>
        <item>Menu</item>
    </string-array>
    <string name="orders_market_sub_total">Sub Total:</string>
    <string name="orders_market_continue">Continuar</string>
    <string name="orders_table_number">Mesa: %1$s</string>
    <string name="orders_table_client_name">Nombre*</string>
    <string name="orders_table_client_cellphone">Celular</string>
    <string name="orders_client_address_reference">Referencia de entrega</string>
    <string name="orders_success_order">¡Pedido enviado\ncorrectamente!</string>
    <string name="orders_type_title">Tipo de entrega:</string>
    <string name="orders_payment_method_title">Método de pago:</string>
    <string name="orders_client_title">Cliente:</string>
    <string name="orders_status_product_quantity">Cant: %1$s</string>
    <string name="orders_status_id">ID: %1$s</string>
    <string name="order_status_detail_title">Detalle del pedido</string>
    <string name="order_status_detail_total">Total:</string>
    <string name="order_status_restaurant">Restaurante:</string>
    <string name="orders_market_appetizer">Entradas</string>
    <string name="orders_market_notes">Indicaciones para este producto</string>
    <string name="orders_market_notes_description">El establecimiento tratará de seguir tus indicaciones para este producto.</string>
    <string name="order_appetizers_modal_title">Debes elegir nuevamente tus entradas</string>
    <string name="order_appetizers_modal_message">El total de tus unidades es menor a tus entradas seleccionadas</string>
    <string name="order_appetizers_modal_action">Entendido</string>
    <string name="order_market_shop_summary">Resumen de tu pedido</string>
    <string name="order_market_shop_summary_quantity">Cantidad</string>
    <string name="orders_payment_method_button"><u>Cambiar</u></string>
    <string name="order_payment_method">Método de pago</string>
    <string name="order_payment_method_title">Método de pago:</string>
    <string name="order_status_note_title">¡Nota!</string>
    <string name="order_status_note_message">Recuerda que el delivery está a cargo del establecimiento</string>
    <string name="order_modal_want_to_leave">¿Quieres salir?</string>
    <string name="order_modal_lost_products_message">Vas a perder los productos que agregaste a tu pedido.</string>
    <string name="order_modal_affirmative_action">Sí, salir</string>
    <string name="order_modal_negative_action">No, continuar pedido</string>
    <string name="order_modal_send_cancel">Cancelar</string>
    <string name="order_modal_send_retry">Reintentar</string>
    <string name="order_scan_prompt">Escanea el código QR de tu mesa</string>
    <string name="order_detail_notes">Indicaciones</string>
</resources>